config/jsug/survey/delivery.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: survey
  annotations:
    kapp.k14s.io/update-strategy: fallback-on-replace
    ootb.apps.tanzu.vmware.com/servicebinding-workload: "true"
    kapp.k14s.io/change-rule: upsert after upserting servicebinding.io/ServiceBindings
  labels:
    app.kubernetes.io/part-of: survey
    apps.tanzu.vmware.com/auto-configure-actuators: "false"
    apps.tanzu.vmware.com/has-tests: "true"
    apps.tanzu.vmware.com/workload-type: server
    kapp.k14s.io/app: "1677893433487879435"
    kapp.k14s.io/association: v1.ff9d87024c634aa58170fc7501617d25
    app.kubernetes.io/component: run
    carto.run/workload-name: survey
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: run
      app.kubernetes.io/part-of: survey
      apps.tanzu.vmware.com/auto-configure-actuators: "false"
      apps.tanzu.vmware.com/has-tests: "true"
      apps.tanzu.vmware.com/workload-type: server
      carto.run/workload-name: survey
      conventions.carto.run/framework: spring-boot
      kapp.k14s.io/app: "1677893433487879435"
      kapp.k14s.io/association: v1.ff9d87024c634aa58170fc7501617d25
      tanzu.app.live.view: "true"
      tanzu.app.live.view.application.actuator.path: actuator
      tanzu.app.live.view.application.actuator.port: "8080"
      tanzu.app.live.view.application.flavours: spring-boot
      tanzu.app.live.view.application.name: survey
  template:
    metadata:
      annotations:
        boot.spring.io/version: 2.7.9
        conventions.carto.run/applied-conventions: |-
          inspect-image-convention/buildpacks
          inspect-image-convention/base-image
          inspect-image-convention/run-image
          inspect-image-convention/source
          spring-boot-convention/auto-configure-actuators-check
          spring-boot-convention/spring-boot
          spring-boot-convention/spring-boot-graceful-shutdown
          spring-boot-convention/spring-boot-web
          spring-boot-convention/spring-boot-actuator
          spring-boot-convention/spring-boot-actuator-probes
          spring-boot-convention/app-live-view-appflavour-check
          spring-boot-convention/app-live-view-connector-boot
          spring-boot-convention/app-live-view-appflavours-boot
          appliveview-sample/app-live-view-appflavour-check
        developer.conventions/target-containers: workload
        inspect-image.buildpacks.io/base-image: |-
          reference: ghcr.io/making/build-service@sha256:9dd08018eb5c8ffae08d12c72d5c49ab9f9580ba152abc718d2e7ea673fb0867
          top_layer: sha256:8c18fdd12a98e4e60a2111aeb00c38b89a2d46f08154433bdfe4c54eeccc4ef6
        inspect-image.buildpacks.io/buildpacks: |-
          - id: paketo-buildpacks/ca-certificates
            version: 3.6.0
          - id: paketo-buildpacks/bellsoft-liberica
            version: 9.11.0
          - id: paketo-buildpacks/syft
            version: 1.10.1
          - id: paketo-buildpacks/maven
            version: 6.13.0
          - id: paketo-buildpacks/executable-jar
            version: 6.6.2
          - id: paketo-buildpacks/apache-tomcat
            version: 7.12.1
          - id: paketo-buildpacks/apache-tomee
            version: 1.6.1
          - id: paketo-buildpacks/liberty
            version: 3.5.0
          - id: paketo-buildpacks/dist-zip
            version: 5.5.2
          - id: paketo-buildpacks/spring-boot
            version: 5.23.0
          - id: paketo-buildpacks/jattach
            version: 1.3.0
          - id: paketo-buildpacks/image-labels
            version: 4.4.1
        inspect-image.buildpacks.io/run-image: ghcr.io/making/build-service@sha256:4ad9babcb718243b0dbdb29e8b3e1d474eafd6edc20e73a2a09dfde213d5fdcf
        inspect-image.opencontainers.org/source: master/d72a212680755c9e9facc9060a544c2690c4f01e
        kapp.k14s.io/disable-default-label-scoping-rules: ""
        kapp.k14s.io/disable-original: ""
        kapp.k14s.io/identity: v1;jsug/carto.run/Workload/survey;carto.run/v1alpha1
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/component: run
        app.kubernetes.io/part-of: survey
        apps.tanzu.vmware.com/auto-configure-actuators: "false"
        apps.tanzu.vmware.com/has-tests: "true"
        apps.tanzu.vmware.com/workload-type: server
        carto.run/workload-name: survey
        conventions.carto.run/framework: spring-boot
        kapp.k14s.io/app: "1677893433487879435"
        kapp.k14s.io/association: v1.ff9d87024c634aa58170fc7501617d25
        tanzu.app.live.view: "true"
        tanzu.app.live.view.application.actuator.path: actuator
        tanzu.app.live.view.application.actuator.port: "8080"
        tanzu.app.live.view.application.flavours: spring-boot
        tanzu.app.live.view.application.name: survey
    spec:
      containers:
      - env:
        - name: JAVA_TOOL_OPTIONS
          value: -XX:ReservedCodeCacheSize=32M -Xss512k -Dfile.encoding="UTF-8" -Dmanagement.endpoint.health.probes.add-additional-paths="true" -Dmanagement.health.probes.enabled="true" -Dserver.port="8080" -Dserver.shutdown.grace-period="24s" -Duser.timezone="Asia/Tokyo"
        - name: BPL_JVM_THREAD_COUNT
          value: "28"
        - name: SPRING_PROFILES_ACTIVE
          value: cloud
        image: ghcr.io/making/supply-chain/survey-jsug@sha256:4af97badb1e5bb965375c652d7cba2e667b349f8a7bfcd56362633d123b08112
        livenessProbe:
          httpGet:
            path: /livez
            port: 8080
            scheme: HTTP
        name: workload
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
            scheme: HTTP
        resources:
          limits:
            memory: 500Mi
          requests:
            memory: 500Mi
        securityContext:
          runAsUser: 1000
      serviceAccountName: default
---
apiVersion: v1
kind: Service
metadata:
  name: survey
  labels:
    app.kubernetes.io/part-of: survey
    apps.tanzu.vmware.com/auto-configure-actuators: "false"
    apps.tanzu.vmware.com/has-tests: "true"
    apps.tanzu.vmware.com/workload-type: server
    kapp.k14s.io/app: "1677893433487879435"
    kapp.k14s.io/association: v1.ff9d87024c634aa58170fc7501617d25
    app.kubernetes.io/component: run
    carto.run/workload-name: survey
spec:
  selector:
    app.kubernetes.io/component: run
    app.kubernetes.io/part-of: survey
    apps.tanzu.vmware.com/auto-configure-actuators: "false"
    apps.tanzu.vmware.com/has-tests: "true"
    apps.tanzu.vmware.com/workload-type: server
    carto.run/workload-name: survey
    conventions.carto.run/framework: spring-boot
    kapp.k14s.io/app: "1677893433487879435"
    kapp.k14s.io/association: v1.ff9d87024c634aa58170fc7501617d25
    tanzu.app.live.view: "true"
    tanzu.app.live.view.application.actuator.path: actuator
    tanzu.app.live.view.application.actuator.port: "8080"
    tanzu.app.live.view.application.flavours: spring-boot
    tanzu.app.live.view.application.name: survey
  ports:
  - targetPort: 8080
    port: 8080
    name: http
