config/jsug/survey/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: survey
  annotations:
    kubernetes.io/ingress.class: contour
    cert-manager.io/cluster-issuer: "letsencrypt"
    kapp.k14s.io/change-rule: "upsert after upserting Services"
  labels: 
    app.kubernetes.io/part-of: survey
    apps.tanzu.vmware.com/auto-configure-actuators: "false"
    apps.tanzu.vmware.com/has-tests: "true"
    apps.tanzu.vmware.com/workload-type: server
    kapp.k14s.io/app: "1677893433487879435"
    kapp.k14s.io/association: v1.ff9d87024c634aa58170fc7501617d25
    app.kubernetes.io/component: run
    carto.run/workload-name: survey
    
spec:
  tls:
    - secretName: survey-tls
      hosts:
      - survey.run.lime.maki.lol
  rules:
  - host: survey.run.lime.maki.lol
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: survey
            port:
              number: 8080
